# forth

./: LICENSE  flake.nix  forth.cabal  fourmolu.yaml
app/: Main.hs
src/: Lib.hs
