cabal-version: 3.0
name:          forth
version:       0.0.0.0
license:       BSD-3-Clause
license-file:  LICENSE
build-type:    Simple

common warnings
  ghc-options:
    -Wall -Wextra -Weverything -Wcompat -Wno-implicit-prelude
    -Wno-unsafe -Wno-missing-safe-haskell-mode
    -Wno-missing-local-signatures -Wno-missing-import-lists -haddock

common defaults
  default-language:   GHC2021
  default-extensions:
    BlockArguments
    DerivingStrategies
    UnicodeSyntax

library
  import:          warnings, defaults
  exposed-modules: Lib
  build-depends:
    , base          >=4.7 && <5
    , generic-lens
    , lens
    , mtl
    , text
    , vector

  hs-source-dirs:  src

executable forth
  import:         warnings, defaults
  main-is:        Main.hs
  build-depends:
    , base   >=4.7 && <5
    , forth

  hs-source-dirs: app

test-suite forth-test
  import:         warnings, defaults
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        Main.hs
  build-depends:
    , base   >=4.7 && <5
    , forth
